; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-msm/extr_vreg.c_vreg_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-msm/extr_vreg.c_vreg_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vreg = type { i32 }
%struct.device = type { i32 }

@vregs = common dso_local global %struct.vreg* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.vreg* @vreg_get(%struct.device* %0, i8* %1) #0 {
  %3 = alloca %struct.vreg*, align 8
  %4 = alloca %struct.device*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %28, %2
  %8 = load i32, i32* %6, align 4
  %9 = load %struct.vreg*, %struct.vreg** @vregs, align 8
  %10 = call i32 @ARRAY_SIZE(%struct.vreg* %9)
  %11 = icmp slt i32 %8, %10
  br i1 %11, label %12, label %31

12:                                               ; preds = %7
  %13 = load %struct.vreg*, %struct.vreg** @vregs, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.vreg, %struct.vreg* %13, i64 %15
  %17 = getelementptr inbounds %struct.vreg, %struct.vreg* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @strcmp(i32 %18, i8* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %27, label %22

22:                                               ; preds = %12
  %23 = load %struct.vreg*, %struct.vreg** @vregs, align 8
  %24 = load i32, i32* %6, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.vreg, %struct.vreg* %23, i64 %25
  store %struct.vreg* %26, %struct.vreg** %3, align 8
  br label %32

27:                                               ; preds = %12
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %6, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %6, align 4
  br label %7

31:                                               ; preds = %7
  store %struct.vreg* null, %struct.vreg** %3, align 8
  br label %32

32:                                               ; preds = %31, %22
  %33 = load %struct.vreg*, %struct.vreg** %3, align 8
  ret %struct.vreg* %33
}

declare dso_local i32 @ARRAY_SIZE(%struct.vreg*) #1

declare dso_local i32 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
